packages/ops/kubernetes/xr3ngine/overlays/production/production.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xr3ngine
  namespace: xr3ngine
spec:
  replicas: 2
  selector:
    matchLabels:
      app: xr3ngine
  template:
    metadata:
      labels:
        app: xr3ngine
    spec:
      serviceAccountName: xr3ngine
      containers:
        - name: xr3ngine
          image: xr3ngine/xr3ngine:v4.0.6
          ports:
            - containerPort: 3000
            - containerPort: 3001
          volumeMounts:
            - mountPath: "/usr/src/xr3ngine/config/tmp"
              name: xr3ngine-prod-config
              readOnly: true
          lifecycle:
            postStart:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - cp /usr/src/xr3ngine/config/tmp/production.json /usr/src/xr3ngine/config/production.json
          imagePullPolicy: IfNotPresent
      dnsPolicy: Default
      volumes:
        - name: xr3ngine-prod-config
          secret:
            secretName: xr3ngine-prod-config
      $patch: replace
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: xr3ngine-ingress-master
  namespace: xr3ngine
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "master"
spec:
  tls:
    - hosts:
        - api.xr3ngine.dev
      secretName: xr3ngine-secret
  rules:
    - host: api.xr3ngine.dev
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: xr3ngine-ingress-location-upload-minion
  namespace: xr3ngine
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "minion"
    nginx.org/client-max-body-size: "2000m"
spec:
  rules:
    - host: api.xr3ngine.dev
      http:
        paths:
          - backend:
              serviceName: xr3ngine
              servicePort: 3000
            path: /location/upload_file
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: xr3ngine-ingress-ws-minion
  namespace: xr3ngine
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "minion"
    nginx.org/websocket-services: "xr3ngine-ws"
spec:
  rules:
    - host: api.xr3ngine.dev
      http:
        paths:
          - backend:
              serviceName: xr3ngine-ws
              servicePort: 3001
            path: /subscriptions
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: xr3ngine-ingress-main-minion
  namespace: xr3ngine
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "minion"
spec:
  rules:
    - host: api.xr3ngine.dev
      http:
        paths:
          - backend:
              serviceName: xr3ngine
              servicePort: 3000
            path: /
